--- a/index.html
+++ b/index.html
@@ -1,83 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Happy New Year 🎉</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', sans-serif;
-            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-            color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            text-align: center;
-        }
-        .card {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 0 25px rgba(255,255,255,0.2);
-            max-width: 400px;
-            animation: fadeIn 2s ease;
-        }
-        h1 {
-            font-size: 28px;
-            margin-bottom: 10px;
-        }
-        h2 {
-            font-size: 20px;
-            font-weight: normal;
-            margin-bottom: 20px;
-        }
-        p {
-            font-size: 16px;
-            line-height: 1.6;
-        }
-        .name {
-            font-size: 22px;
-            font-weight: bold;
-            color: #ffd700;
-        }
-        footer {
-            margin-top: 25px;
-            font-size: 14px;
-            opacity: 0.8;
-        }
-        @keyframes fadeIn {
-            from {opacity: 0; transform: translateY(20px);}
-            to {opacity: 1; transform: translateY(0);}
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Happy New Year ✨</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  background: radial-gradient(circle at top, #0f2027, #000);
+  height: 100vh;
+  overflow: hidden;
+  color: #fff;
+}
+
+/* ===== PARTICLES ===== */
+.particle {
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background: gold;
+  border-radius: 50%;
+  animation: floatUp linear infinite;
+  opacity: 0.8;
+}
+
+@keyframes floatUp {
+  from {
+    transform: translateY(100vh) scale(0.3);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(-10vh) scale(1);
+    opacity: 1;
+  }
+}
+
+/* ===== MAIN CARD ===== */
+.container {
+  position: relative;
+  z-index: 2;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  background: rgba(255,255,255,0.08);
+  backdrop-filter: blur(12px);
+  border-radius: 25px;
+  padding: 35px 30px;
+  max-width: 420px;
+  width: 90%;
+  text-align: center;
+  box-shadow: 0 0 40px rgba(255,215,0,0.25);
+  animation: popIn 1.5s ease forwards;
+  opacity: 0;
+}
+
+@keyframes popIn {
+  0% {transform: scale(0.7); opacity: 0;}
+  60% {transform: scale(1.05); opacity: 1;}
+  100% {transform: scale(1);}
+}
+
+h1 {
+  font-size: 30px;
+  margin-bottom: 10px;
+  animation: fadeSlide 1.5s ease forwards;
+}
+
+.name {
+  color: gold;
+  font-weight: 600;
+}
+
+.message {
+  margin-top: 20px;
+  font-size: 16px;
+  line-height: 1.7;
+  opacity: 0;
+  animation: reveal 1.5s ease forwards;
+  animation-delay: 1.3s;
+}
+
+@keyframes reveal {
+  from {opacity: 0; transform: translateY(20px);}
+  to {opacity: 1; transform: translateY(0);}
+}
+
+button {
+  margin-top: 25px;
+  padding: 10px 22px;
+  border-radius: 30px;
+  border: none;
+  background: linear-gradient(45deg, gold, orange);
+  color: #000;
+  font-weight: 600;
+  cursor: pointer;
+  animation: glow 2s infinite alternate;
+}
+
+@keyframes glow {
+  from {box-shadow: 0 0 10px gold;}
+  to {box-shadow: 0 0 25px orange;}
+}
+
+.footer {
+  margin-top: 18px;
+  font-size: 14px;
+  opacity: 0.85;
+}
+</style>
 </head>
+
 <body>
 
-<div class="card">
+<!-- PARTICLES -->
+<script>
+for(let i=0;i<30;i++){
+  let p = document.createElement("div");
+  p.className = "particle";
+  p.style.left = Math.random()*100 + "vw";
+  p.style.animationDuration = (5 + Math.random()*5) + "s";
+  p.style.animationDelay = Math.random()*5 + "s";
+  document.body.appendChild(p);
+}
+</script>
+
+<div class="container">
+  <div class="card">
     <h1>🎆 Happy New Year 2026 🎆</h1>
-    <h2>Dear <span class="name">[Fiancé Name]</span>,</h2>
 
-    <p>
-        As this new year begins, we welcome you not just into a new year,
-        but into our family with warmth and happiness.
-    </p>
+    <div class="message">
+  Heartfelt New Year wishes to <span class="name">Rakesh</span> & Family,<br><br>
 
-    <p>
-        May 2026 bring you success, good health, peace,
-        and beautiful moments with the people you love.
-    </p>
+  As we step into the New Year 2026, we extend our warm wishes
+  to you and your family for good health, happiness, and prosperity.<br><br>
 
-    <p>
-        We are truly happy to have you as part of our lives 💙
-    </p>
+  May this year bring peace to your home, success to your efforts,
+  and many joyful moments to cherish together.<br><br>
 
-    <footer>
-        — With best wishes,<br>
-        <strong>[Your Sister's Name] & Family</strong>
-    </footer>
+  We are truly delighted to welcome you into our family
+  and look forward to a beautiful journey ahead.
 </div>
+
+
+ <button onclick="surprise()">With Warm Regards ✨</button>
+
+    <div class="footer" id="footer"></div>
+  </div>
+</div>
+
+<script>
+function surprise(){
+  document.getElementById("footer").innerHTML =
+    "— With warm regards and best wishes 🌸<br><strong>Reethamshi and Family</strong>";
+}
+</script>
 
 </body>
 </html>
