--- a/index.html
+++ b/index.html
@@ -2,77 +2,61 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Happy New Year 2026 ✨</title>
+<title>Happy New Year 2026</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
 
 <style>
-* {
+html, body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Poppins', sans-serif;
-  height: 100vh;
-  background: radial-gradient(circle at top, #1a2a6c, #000);
-  overflow: hidden;
-  color: white;
-}
-
-/* ===== FIREWORKS ===== */
-.firework {
-  position: absolute;
-  width: 6px;
-  height: 6px;
-  border-radius: 50%;
-  background: gold;
-  animation: explode 2.5s infinite ease-out;
-  opacity: 0.8;
-}
-
-@keyframes explode {
-  0% {transform: scale(0); opacity: 1;}
-  100% {transform: scale(18); opacity: 0;}
-}
-
-/* ===== CENTER CARD ===== */
-.container {
   height: 100%;
+  background: #000;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
+}
+
+/* ===== CANVAS FIREWORKS ===== */
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+/* ===== SECTIONS ===== */
+section {
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 40px 20px;
   position: relative;
-  z-index: 2;
+  z-index: 1;
 }
 
-.card {
+.glass {
   background: rgba(255,255,255,0.12);
-  backdrop-filter: blur(16px);
-  border-radius: 26px;
-  padding: 36px 30px;
-  max-width: 430px;
-  width: 92%;
+  backdrop-filter: blur(18px);
+  border-radius: 28px;
+  padding: 40px 30px;
+  max-width: 460px;
+  width: 95%;
   text-align: center;
-  box-shadow: 0 0 50px rgba(255,215,0,0.3);
+  box-shadow: 0 0 60px rgba(255,215,0,0.25);
 }
 
-/* ===== SHIMMER TEXT ===== */
-.shimmer {
-  font-size: 30px;
-  font-weight: 600;
-  background: linear-gradient(
-    90deg,
-    #fff,
-    #ffd700,
-    #fff
-  );
+/* ===== HERO TEXT ===== */
+.hero {
+  font-family: 'Playfair Display', serif;
+  font-size: 34px;
+  background: linear-gradient(90deg, #fff, gold, #fff);
   background-size: 200%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: shimmer 3s infinite;
+  animation: shimmer 4s infinite;
 }
 
 @keyframes shimmer {
@@ -81,89 +65,131 @@ body {
 }
 
 .message {
+  margin-top: 20px;
   font-size: 16px;
-  line-height: 1.7;
-  margin-top: 18px;
+  line-height: 1.8;
 }
 
 .name {
-  color: #ffd700;
+  color: gold;
   font-weight: 600;
 }
 
 .footer {
-  margin-top: 22px;
+  margin-top: 25px;
   font-size: 14px;
   opacity: 0.9;
 }
 
-/* ===== MUSIC BUTTON ===== */
-.music-btn {
-  margin-top: 20px;
-  padding: 10px 22px;
-  border-radius: 30px;
-  border: none;
-  background: linear-gradient(45deg, gold, orange);
-  color: #000;
-  font-weight: 600;
-  cursor: pointer;
-  box-shadow: 0 0 15px rgba(255,215,0,0.6);
+/* ===== TAP OVERLAY ===== */
+.tap {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 13px;
+  opacity: 0.7;
+  z-index: 5;
 }
 </style>
 </head>
 
 <body>
 
-<!-- FIREWORKS -->
-<script>
-for (let i = 0; i < 10; i++) {
-  let fw = document.createElement("div");
-  fw.className = "firework";
-  fw.style.left = Math.random() * 100 + "vw";
-  fw.style.top = Math.random() * 60 + "vh";
-  fw.style.animationDelay = Math.random() * 2 + "s";
-  document.body.appendChild(fw);
-}
-</script>
+<canvas id="fireworks"></canvas>
 
-<div class="container">
-  <div class="card">
-
-    <div class="shimmer">🎆 Happy New Year 2026 🎆</div>
-
+<!-- SECTION 1 -->
+<section>
+  <div class="glass">
+    <div class="hero">Happy New Year 2026 ✨</div>
     <div class="message">
-      Dear <span class="name">Rakesh</span> & Family,<br><br>
-
-      As we welcome the New Year, we send our warmest wishes to you
-      and your family for happiness, good health, and prosperity.<br><br>
-
-      May this year bring peace to your home, success in your journey,
-      and many joyful moments to cherish together.<br><br>
-
-      We are truly happy to welcome you into our family
-      and look forward to a wonderful year ahead.
+      A new year begins with hope,<br>
+      warmth, and beautiful new journeys.
     </div>
+  </div>
+</section>
 
-    <button class="music-btn" onclick="playMusic()">▶ Play Music</button>
+<!-- SECTION 2 -->
+<section>
+  <div class="glass">
+    <div class="message">
+      Wishing you a prosperous new year<span class="name">Rakesh</span> & Family,<br><br>
 
+      As we step into 2026, we extend our heartfelt wishes
+      to you and your family for happiness, good health,
+      and prosperity.<br><br>
+
+      May this year bring peace to your home,
+      success to your endeavors,
+      and many moments to cherish together.
+    </div>
+  </div>
+</section>
+
+<!-- SECTION 3 -->
+<section>
+  <div class="glass">
+    <div class="message">
+      We are truly delighted to welcome you into our family
+      and look forward to a wonderful journey ahead.
+    </div>
     <div class="footer">
       — With warm regards 🌸<br>
       <strong>Reethamshi & Family</strong>
     </div>
   </div>
-</div>
+</section>
 
-<!-- AUDIO -->
-<audio id="bgMusic" loop>
-  <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_9eaf0f27f2.mp3?filename=soft-piano-ambient-110397.mp3" type="audio/mpeg">
+<div class="tap">🔊 Tap anywhere to enable music</div>
+
+<!-- MUSIC -->
+<audio id="music" loop muted>
+  <source src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_9eaf0f27f2.mp3" type="audio/mpeg">
 </audio>
 
 <script>
-function playMusic(){
-  const music = document.getElementById("bgMusic");
+/* ===== MUSIC AUTO START (MUTED) ===== */
+const music = document.getElementById("music");
+music.play().catch(()=>{});
+
+document.body.addEventListener("click", () => {
+  music.muted = false;
   music.play();
+}, { once: true });
+
+/* ===== FIREWORKS ENGINE ===== */
+const canvas = document.getElementById("fireworks");
+const ctx = canvas.getContext("2d");
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+
+let fireworks = [];
+
+function createFirework() {
+  const x = Math.random() * canvas.width;
+  const y = Math.random() * canvas.height * 0.5;
+  const colors = ["#ffd700", "#ff4d4d", "#4dd2ff"];
+  fireworks.push({ x, y, r: 0, color: colors[Math.floor(Math.random()*3)] });
 }
+
+function animate() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  fireworks.forEach((f, i) => {
+    ctx.beginPath();
+    ctx.arc(f.x, f.y, f.r, 0, Math.PI * 2);
+    ctx.strokeStyle = f.color;
+    ctx.stroke();
+    f.r += 2;
+    if (f.r > 80) fireworks.splice(i, 1);
+  });
+  requestAnimationFrame(animate);
+}
+
+setInterval(createFirework, 800);
+animate();
 </script>
 
 </body>
 </html>
+
+
